--- a/index.html
+++ b/index.html
@@ -17,31 +17,30 @@
     <nav>
         <div class="logo">
             <img src="recursos/logo.png" alt="logo de la empresa">
-            <h2>Aconcagua</h2>
+            <h2>Ferretería Aconcagua</h2>
         </div>
         <div class="links">
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Catalog</a>
-            <a href="#">About</a>
+            <a href="#">Principal</a>
+            <a href="#">Productos</a>
+            <a href="#">Ofertones</a>
+            <a href="#">Sobre Nosotros</a>
         </div>
     </nav>
     <header>
-        <h1 class="header__h1">TODO LO QUE NECESITAS AQUÍ</h1>
-        <p class="header__h2">Revisa nuestro stock y planea tu compra desde tu casa!</p>
+        <h1 class="header__h1">Revisa nuestro stock y planea tu compra desde tu casa!</h1>
     </header>
     
     <section class="filtros">
         <div class="filtros__container">
-            <div class="filtros__card filtros__card1">1</div>
-            <div class="filtros__card filtros__card2">2</div>
-            <div class="filtros__card filtros__card3">3</div>
-            <div class="filtros__card filtros__card4">4</div>
-            <div class="filtros__card filtros__card5">5</div>
+            <div class="filtros__card filtros__card1">Tornilleria</div>
+            <div class="filtros__card filtros__card2">Pinturas</div>
+            <div class="filtros__card filtros__card3">Tubos</div>
+            <div class="filtros__card filtros__card4">Herramientas</div>
+            <div class="filtros__card filtros__card5">Otros</div>
         </div>
     </section>
     <div class="middle">
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h2>Todo lo que necesitas está Aquí</h2>
     </div>
     
     <section class="slider">
@@ -77,7 +76,7 @@
         <div role="tablist" class="slider__indicadores"></div>
     </section>
     <footer>
-        <p>siguenos en las redes sociales | &copy; Todos los derechos reservados</p>
+        <p>Pie de página</p>
     </footer>
     <!-- SCRIPTS -->
     <script src="scripts/glider.js"></script>
